# shenchong

./: .gitignore  503问题修复报告.md  BEHAVIOR_INTEGRATION_REPORT.md  China_Network_Setup_Guide.md  China_Network_Setup_Guide_Fixed.md  Git_Push_Final_Report.md  Git_Push_Status_Report.md  Git仓库清理方案.md  Network_Troubleshooting_Steps.md  PETBRAIN_BRIDGE_REPORT.md  PROJECT_SUMMARY.md  Perfect_State_Achievement_Report.md  README.md  START_HERE_中国团队.md  STATE_MANAGEMENT_REPORT.md  System_Status_Report.md  T2B_ENHANCEMENT_REPORT.md  T2C_README_ENHANCEMENT_REPORT.md  T3-T4_Review_Report.md  T3B_BEHAVIOR_STRATEGY_REPORT.md  T3D_PLAYER_PLUGIN_REPORT.md  T4D_Completion_Report.md  T4_0_UI_ANIMATION_BINDING_REPORT.md  T4_0_VIDEO_BEHAVIOR_INTEGRATION_REPORT.md  T4_FIX_ANIMATED_PLAYER_COMPLETION_REPORT.md  T4_UI_ANIMATED_PLAYER_COMPLETION_REPORT.md  T5A_Completion_Report.md  T5B_AIEmotionDriver_Completion_Report.md  T5C_RhythmAdaptation_Completion_Report.md  T6-E_9个问题项修复完成报告.md  T6-E_一个碗的四种状态切换_完成报告.md  T6-E_四碗UI任务验证报告.md  T6-F_单碗多状态行为绑定完成报告.md  T6-G_21个问题项修复完成报告.md  T6-H_测试修复完成报告.md  T6-I_35个问题项修复报告.md  T6D_Refactoring_Report.md  T6E_BehaviorStrategy_Fix_Report.md  T6_StrategyConfigPanel_Completion_Report.md  UI_Launch_Guide.md  (+48 more)
data/: sample-strategy.json
dist-ui/: index.html
docs/: BehaviorDB使用说明.md  PROJECT_SUMMARY.md  T5-C_RhythmAdaptationEngine_v1.1_Implementation_Summary.md  神宠行为控制系统说明书_v1.0.md
electron/: main.js  preload.js
markdown-backup/: 503问题修复报告.md  China_Network_Setup_Guide_Fixed.md  Git_Push_Final_Report.md  README.md  (+25 more)
src/native/: Cargo.toml  dir_player_bridge.rs
(+173 files in other folders)
