[package]
name = "dir-player-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "DirPlayer Rust 核心逻辑 - Neon 桥接模块"

[lib]
name = "dir_player_bridge"
crate-type = ["cdylib"]

[dependencies]
neon = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

[build-dependencies]
neon-build = "0.10"
